# isixhosa-crawler

./: .gitignore  12lid.sh  README.md  gen_seeds.py  inspect_out.py  remove_blacklisted.py  reprocess_seeds.py  requirements.txt  run.sh  scrapy.cfg  seeds.txt  words.csv
crawler/: settings.py
crawler/spiders/: isixhosa.py
csc2005z/: items.py  middlewares.py  pipelines.py  settings.py
csc2005z/spiders/: xhosa.py
inspect_out/: Cargo.toml
inspect_out/src/: main.rs
