[package]
name = "inspect_out"
version = "0.1.0"
edition = "2021"

[dependencies]
tldextract = "0.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.0.2", features = ["derive"] }
anyhow = "1.0.65"
itertools = "0.10.5"
rayon = "1.5.3"
dashmap = "5.4.0"