[package]
name = "inspect_out"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.0.2", features = ["derive"] }
anyhow = "1.0.65"
itertools = "0.10.5"
rayon = "1.5.3"
punkt = "1.0.5"
kuchiki = "0.8.1"
textwrap = "0.15.1"
xtra = { git = "https://github.com/Restioson/xtra", rev = "ca061b4", features = ["macros"] }
num_cpus = "1.13.1"
pollster = "0.2.5"
gethostname = "0.3.0"
tldextract = "0.6.0"
regex = "1.6.0"
dashmap = "5.4.0"
